Fix rowLayout bugs with description and placeholder #159580236180911

--- a/public/sources/attributes/rowLayout/css/tokenizationList/styles.less
+++ b/public/sources/attributes/rowLayout/css/tokenizationList/styles.less
@@ -11,12 +11,13 @@
   word-break: break-all;
   &.vcv-ui-tag-list-input-editing-disabled {
     position: absolute;
-    height: 1px;
     opacity: 0;
+    pointer-events: none;
   }
 }
 .vcv-ui-tag-list {
   cursor: text;
+  min-height: 39px;
 }
 @import "./suggestBox";
 
